# premiere-ai

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  pyproject.toml
.claude/skills/major-release/: SKILL.md
.claude/skills/patch/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
src/premiere_ai/: create_empty_premiere_project.py  font_metrics.py  import_raw_footage.py  pause_cuts.py  remove_pauses.py  scripts.py  sync_audio.py  transcribe.py  zmbv_to_h265_vga.sh
src/premiere_ai/colorchecker/: __init__.py  apply_cube_lut.py  build_lut.py  build_lut_classic.py  classic_reference.py  detect.py  extract_targets.py  identify_classic_patches.py  identify_video_patches.py  image_io.py  lut_io.py  pages.py  patch_grid.py  patch_mask.py  segment.py  segment_left_target.py  subsegment.py  tone_curve.py  vectorscope.py  vectorscope_render.py
tests/: test_create_empty_premiere_project.py  test_import_raw_footage.py  test_pause_cuts.py  test_remove_pauses.py  test_sync_audio.py  test_transcribe.py
