[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "premiere-ai"
version = "0.2.0"
description = "AI-assisted video-production workflows for Adobe Premiere Pro, built on premiere-cli"
readme = "README.md"
license = {text = "CC-BY-SA-4.0"}
requires-python = ">=3.10"
dependencies = [
    # Drives Premiere Pro itself (premiere-cli / premiere-log + the CEP
    # bridge panel). This package layers AI workflows on top of it.
    "premiere-cli",
    "mlx-audio",
    "torch",
    "torchaudio",
    "torchcodec",
    "anthropic",
    "python-dotenv",
    "fonttools",
]

[project.urls]
Repository = "https://github.com/stefanwebb/premiere-ai"

[project.scripts]
transcribe = "premiere_ai.transcribe:main"
remove-pauses = "premiere_ai.remove_pauses:main"
zmbv-to-h265-vga = "premiere_ai.scripts:zmbv_to_h265_vga"
zmbv-to-h265-ega = "premiere_ai.scripts:zmbv_to_h265_ega"
sync-audio = "premiere_ai.sync_audio:main"
import-raw-footage = "premiere_ai.import_raw_footage:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
premiere_ai = ["*.sh"]
